--- a/galeria.html
+++ b/galeria.html
@@ -45,11 +45,11 @@
       <div class="fas fa-bars" id="menu-btn"></div>
       <div class="fas fa-heart" id="search-btn"></div>
       <div class="fas fa-info" id="cart-btn"></div>
-      <div class="fas fa-arrow-circle-up" id="login-btn"></div>
+      <a href="#inicio"><div class="fas fa-arrow-circle-up" id="login-btn"></div></a>
    </div>
 
   <form action="" class="search-form">
-      <input type="search" id="search-box" placeholder="Tu puedes hacer cualquier cosa">
+      <input type="search" id="search-box" placeholder="Te deseamos la mejor vibra 24/7">
       <label for="search-box" class="fas fa-heart"></label>
   </form>
 
@@ -121,109 +121,109 @@
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/145650963-d6372c10-a840-4b3c-9624-f82e05d0b533.jpeg" alt="abduccion">
             <p></p>
-            <a href="#" class="btn">Código A-1</a>
+            <a class="btn">Código A-1</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/145650965-c9eded29-63e3-4b9d-9a17-282c10cb654a.jpeg" alt="ovni">
             <p></p>
-            <a href="#" class="btn">Código A-2</a>
+            <a class="btn">Código A-2</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/145650970-8bba8403-98fb-4712-9637-77263cb70486.jpeg" alt="alien covid">
             <p></p>
-             <a href="#" class="btn">Código A-3</a>
+             <a class="btn">Código A-3</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/145650973-e79da72a-4686-4196-b19b-3e39ebe2fb34.jpeg" alt="laboratorio alien">
             <p></p>
-            <a href="#" class="btn">Código A-4</a>
+            <a class="btn">Código A-4</a>
         </div> 
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/145650979-0ac83b0d-79d8-4631-b3f6-948648d68aae.jpeg" alt="alien gorra">
             <p></p>
-            <a href="#" class="btn">Código A-5</a>
+            <a class="btn">Código A-5</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/145650988-7e379082-c085-422c-859e-9fc80c186fa3.jpeg" alt="alien weed">
             <p></p>
-            <a href="#" class="btn">Código A-6</a>
+            <a class="btn">Código A-6</a>
         </div>  
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/146228894-8174263d-ea74-4fa6-bb1c-3f61764190a5.jpeg" alt="simpson alien">
             <p></p>
-            <a href="#" class="btn">Código A-7</a>
+            <a class="btn">Código A-7</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/146228888-1e3ce54e-1abc-4ae0-adc8-0c103b2e7895.jpeg" alt="alien mistico">
             <p></p>
-            <a href="#" class="btn">Código A-8</a>
+            <a class="btn">Código A-8</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/146228887-1083b1ac-8080-40fb-a155-f81bb059556b.jpeg" alt="alien avion">
             <p></p>
-            <a href="#" class="btn">Código A-9</a>
+            <a class="btn">Código A-9</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/146228886-c6ee47be-f711-413a-8fc2-24b23cb6b0e5.jpeg" alt="alien gato">
             <p></p>
-            <a href="#" class="btn">Código A-10</a>
+            <a class="btn">Código A-10</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/146228884-0ee5c6e2-be3a-4acd-bc53-7987a3b7fe29.jpeg" alt="ovni">
             <p></p>
-            <a href="#" class="btn">Código A-11</a>
+            <a class="btn">Código A-11</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/146228877-840c9d68-fc98-4038-b5e5-9c611df7131f.jpeg" alt="atronauta">
             <p></p> 
-            <a href="#" class="btn">Código A-12</a>
+            <a class="btn">Código A-12</a>
         </div> 
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/146228898-d46339ed-51e4-4b84-8718-96496edefb66.jpeg" alt="ovni donas">
             <p></p> 
-            <a href="#" class="btn">Código A-13</a>
+            <a class="btn">Código A-13</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/146228906-4c21e48b-54ad-4d64-9d20-3447e78830d4.jpeg" alt="alien skate">
             <p></p> 
-            <a href="#" class="btn">Código A-14</a>
+            <a class="btn">Código A-14</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/146228910-879e7124-5316-452b-b5a0-a8915c1bb2a9.jpeg" alt="abduccion">
             <p></p> 
-            <a href="#" class="btn">Código A-15</a>
+            <a class="btn">Código A-15</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/146228913-e1c6d6a0-3101-45c8-b45d-3730a7f9c483.jpeg" alt="atronauta">
             <p></p> 
-            <a href="#" class="btn">Código A-16</a>
+            <a class="btn">Código A-16</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/146228914-3b8959d9-8044-4a82-85d8-31e7d4fd33f5.jpeg" alt="alien">
             <p></p> 
-            <a href="#" class="btn">Código A-17</a>
+            <a class="btn">Código A-17</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/146228922-55816d49-3ec1-4a15-9d5a-44b629058e98.jpeg" alt="alien fuma">
             <p></p> 
-            <a href="#" class="btn">Código A-18</a>
+            <a class="btn">Código A-18</a>
         </div>
 
         
@@ -242,10 +242,9 @@
 
         <div class="box">
             <h3>Nuestra Informacíon</h3>
-            <a href="#" class="links"> <i class="fas fa-phone"></i> 64750002 </a>
-            <a href="#" class="links"> <i class="fas fa-phone"></i> 22295052 </a>
-            <a href="#" class="links"> <i class="fas fa-envelope"></i> giovacrack@gmail.com </a>
-            <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Coronado, calle la Maquína </a>
+            <a class="links"> <i class="fas fa-phone"></i> 64750002 </a>
+            <a class="links"> <i class="fas fa-envelope"></i> giovacrack@gmail.com </a>
+            <a class="links"> <i class="fas fa-map-marker-alt"></i> Coronado, calle la Maquína </a>
         </div>
 
         <div class="box">
@@ -281,30 +280,19 @@
       </section>
         <div class="box">
             <div class="share">
-                <a href="#" class="fab fa-facebook-f" id="facebook"></a>
-                <a href="#" class="fab fa-instagram" id="instagram"></a>
-                <a href="#" class="fab fa-github" id="github"></a>
+                <a class="fab fa-facebook-f" id="facebook"></a>
+                <a class="fab fa-instagram" id="instagram"></a>
+                <a class="fab fa-github" id="github"></a>
             </div>
         </div>
 
     </div>
 
-    <div class="credit"> Copyright © <span> Web Creators Inc. </span> | all rights reserved </div>
+    <div class="credit"> Copyright © <a href="https://tobikadachi937.github.io/webcreatorsoriginal/" target="_blank"><span> Web Creators Inc. </span></a> | all rights reserved </div>
 
 </section>
 
 <!-- footer section ends -->
-
-
-
-
-
-
-
-
-
-
-
 
 
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
