--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
              <div class="content">
                 <h3>Como Realizar una Compra</h3>
                 <p>Explora por nuestra galería y elige el diseño que más te guste para tu artículo.</p> 
-                <p>También puedes directamente nuestros diseños ya elaborados, loc cuales puedes encontar en la sección de nuestros diseños. </p>
+                <p>También puedes directamente nuestros diseños ya elaborados, los cuales puedes encontar en la sección de nuestros diseños. </p>
                 <p>Cada logo y camisa tienen un código único que los identifica, a la hora de contactarnos dinos cual código es para mayor facilidad con el pedido.</p>
                 <p>Contacta al Whatsapp 64750002 o llena el formulario Contáctanos con el detalle de tu pedido. </p>
                 
