--- a/galeria.html
+++ b/galeria.html
@@ -288,7 +288,7 @@
 
     </div>
 
-    <div class="credit"> Copyright © <a href="https://tobikadachi937.github.io/webcreatorsoriginal/" target="_blank"><span> Web Creators Inc. </span></a> | all rights reserved </div>
+    <div class="credit"> Copyright © <a href="https://www.webcreators.shop" target="_blank"><span> Web Creators Inc. </span></a> | all rights reserved </div>
 
 </section>
 
